--- a/lab1/history.html
+++ b/lab1/history.html
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/main.css">
   <title>lab1</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <header>
-    <section class="menu">
-      <div class="menu_block"><p class="menu_element"><a href="main.html">About Company</a></p></div>
-      <div class="menu_block"><p class="menu_element"><a href="products.html">Products</a></p></div>
-      <div class="menu_block"><p class="menu_element"><a href="contacts.html">Contacts</a></p></div>
-      <div class="menu_block" style="background: rgb(50, 220, 222);"><p class="menu_element"><a href="history.html">History</a></p></div>
-    </section>
-    <section class="title">
-      <p class="title_text">Nike</p>
-    </section>
-  </header> 
-  <main class="main">
-    <p class="text_main">Nike, originally known as Blue Ribbon Sports (BRS), was founded by University of Oregon track athlete Phil Knight and his coach, Bill Bowerman, on January 25, 1964. The company initially operated in Eugene, Oregon as a distributor for Japanese shoe maker Onitsuka Tiger, making most sales at track meets out of Knight's automobile.
+<div>
+  <div class="row header">
+    <div class="col-sm-6">
+      <div class="menu">
+        <div class="row_menu">
+          <a href="main.html">
+            About Company
+          </a>
+        </div>
+        <div class="row_menu">
+          <a href="products.html">
+            Products
+          </a>
+        </div>
+        <div class="row_menu">
+          <a href="shareholders.html">
+            Shareholders
+          </a>
+        </div>
+        <div class="row_menu" style="background: rgb(50, 220, 222);">
+          <a href="history.html">
+            History
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <img src="images/nike_logo.png" class="logo">
+    </div>
+  </div>
+  <div class="row main_block">
+    Nike, originally known as Blue Ribbon Sports (BRS), was founded by University of Oregon track athlete Phil Knight and his coach, Bill Bowerman, on January 25, 1964. The company initially operated in Eugene, Oregon as a distributor for Japanese shoe maker Onitsuka Tiger, making most sales at track meets out of Knight's automobile.
 
-According to Otis Davis, a University of Oregon student athlete coached by Bowerman and Olympic gold medalist at the 1960 Summer Olympics, his coach made the first pair of Nike shoes for him, contradicting a claim that they were made for Phil Knight. According to Davis, "I told Tom Brokaw that I was the first. I don't care what all the billionaires say. Bill Bowerman made the first pair of shoes for me. People don't believe me. In fact, I didn't like the way they felt on my feet. There was no support and they were too tight. But I saw Bowerman made them from the waffle iron, and they were mine".
+    According to Otis Davis, a University of Oregon student athlete coached by Bowerman and Olympic gold medalist at the 1960 Summer Olympics, his coach made the first pair of Nike shoes for him, contradicting a claim that they were made for Phil Knight. According to Davis, "I told Tom Brokaw that I was the first. I don't care what all the billionaires say. Bill Bowerman made the first pair of shoes for me. People don't believe me. In fact, I didn't like the way they felt on my feet. There was no support and they were too tight. But I saw Bowerman made them from the waffle iron, and they were mine".
 
-In its first year in business, BRS sold 1,300 pairs of Japanese running shoes grossing $8,000.[citation needed] By 1965, sales had reached $20,000. In 1966, BRS opened its first retail store at 3107 Pico Boulevard in Santa Monica, California. In 1967, due to increasing sales, BRS expanded retail and distribution operations on the East Coast, in Wellesley, Massachusetts.
+    In its first year in business, BRS sold 1,300 pairs of Japanese running shoes grossing $8,000.[citation needed] By 1965, sales had reached $20,000. In 1966, BRS opened its first retail store at 3107 Pico Boulevard in Santa Monica, California. In 1967, due to increasing sales, BRS expanded retail and distribution operations on the East Coast, in Wellesley, Massachusetts.
 
-By 1971, the relationship between BRS and Onitsuka Tiger came to an end. BRS prepared to launch its own line of footwear, which was rebranded as Nike, and would bear the Swoosh newly designed by Carolyn Davidson. The Swoosh was first used by Nike on June 18, 1971, and was registered with the U.S. Patent and Trademark Office on January 22, 1974.
+    By 1971, the relationship between BRS and Onitsuka Tiger came to an end. BRS prepared to launch its own line of footwear, which was rebranded as Nike, and would bear the Swoosh newly designed by Carolyn Davidson. The Swoosh was first used by Nike on June 18, 1971, and was registered with the U.S. Patent and Trademark Office on January 22, 1974.
 
-In 1976, the company hired John Brown and Partners, based in Seattle, as its first advertising agency. The following year, the agency created the first "brand ad" for Nike, called "There is no finish line", in which no Nike product was shown. By 1980, Nike had attained a 50% market share in the U.S. athletic shoe market, and the company went public in December of that year.
+    In 1976, the company hired John Brown and Partners, based in Seattle, as its first advertising agency. The following year, the agency created the first "brand ad" for Nike, called "There is no finish line", in which no Nike product was shown. By 1980, Nike had attained a 50% market share in the U.S. athletic shoe market, and the company went public in December of that year.
 
-Wieden+Kennedy, Nike's primary ad agency, has worked with Nike to create many print and television advertisements, and Wieden+Kennedy remains Nike's primary ad agency.[citation needed] It was agency co-founder Dan Wieden who coined the now-famous slogan "Just Do It" for a 1988 Nike ad campaign, which was chosen by Advertising Age as one of the top five ad slogans of the 20th century and enshrined in the Smithsonian Institution.Walt Stack was featured in Nike's first "Just Do It" advertisement, which debuted on July 1, 1988. Wieden credits the inspiration for the slogan to "Let's do it", the last words spoken by Gary Gilmore before he was executed.</p>
-  </main>
-  <footer>
-    <section class="section">
+    Wieden+Kennedy, Nike's primary ad agency, has worked with Nike to create many print and television advertisements, and Wieden+Kennedy remains Nike's primary ad agency.[citation needed] It was agency co-founder Dan Wieden who coined the now-famous slogan "Just Do It" for a 1988 Nike ad campaign, which was chosen by Advertising Age as one of the top five ad slogans of the 20th century and enshrined in the Smithsonian Institution.Walt Stack was featured in Nike's first "Just Do It" advertisement, which debuted on July 1, 1988. Wieden credits the inspiration for the slogan to "Let's do it", the last words spoken by Gary Gilmore before he was executed.
+
+  </div>
+  <div class="row">    
+    <div class="footer col-sm-6" >
       <p>Your ad could be here</p>
-    </section>
-    <section class="column">
+    </div>
+    <div class="footer col-sm-6">
       <p>lab1. KV-74. Ivan Merezhko</p>
-    </section>
-  </footer>
+    </div>
+  </div>
+</div>
 </body>
 </html>
